--- a/app/src/main/res/layout/activity_layer.xml
+++ b/app/src/main/res/layout/activity_layer.xml
@@ -36,6 +36,7 @@
         android:text="Button"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toBottomOf="@id/layer"
+        app:layout_constraintEnd_toStartOf="@+id/button11"
         app:layout_constraintStart_toEndOf="@+id/button9"
         app:layout_constraintTop_toTopOf="@id/layer" />
 
@@ -48,7 +49,7 @@
         android:text="Button"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toBottomOf="@id/layer"
-        app:layout_constraintStart_toEndOf="@+id/button10"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/layer" />
 
 
